<resources>
    <string name="app_name">Roboyard</string>
    <string name="action_settings">Settings</string>
    <string name="new_random_game">Play</string>
    <string name="new_random_game_a11y">Start a new game</string>
    <string name="level_game">Levels</string>
    <string name="level_game_a11y">Play predefined game levels</string>
    <string name="load_game">Load Game</string>
    <string name="load_game_a11y">Load game</string>
    <string name="settings">Settings</string>
    <string name="settings_a11y">Game settings</string>
    <string name="help">How to Play</string>
    <string name="help_a11y">How to Play</string>
    <string name="main_menu_title" translatable="false">Roboyard</string>
    <string name="credits">Credits</string>
    <string name="button_ok" comment="Standard OK button text">OK</string>
    <string name="button_cancel" comment="Standard cancel button text">Cancel</string>
    <string name="button_save" comment="Standard save button text">Save</string>
    <string name="button_restart" comment="Button to restart the current level">Restart</string>
    <string name="button_pause" comment="Button to pause the game">Pause</string>
    <string name="button_resume" comment="Button to resume a paused game">Resume</string>
    <string name="button_quit" comment="Button to quit/exit the current screen">Quit</string>
    <string name="button_back" comment="Navigation button to go back">Back</string>
    <string name="button_next" comment="Navigation button to proceed to next page/level">Next</string>
    <string name="button_prev" comment="Navigation button to go to previous page/level">Previous</string>
    <string name="button_retry" comment="Button to retry the current level">Retry</string>
    <string name="button_hint" comment="Button to get a game hint">Hint</string>
    <string name="button_skip" comment="Button to skip a level or tutorial">Skip</string>
    <string name="main_menu_play" comment="Button on main menu to start playing the game">Play</string>
    <string name="main_menu_settings" comment="Button on main menu to open settings">Settings</string>
    <string name="main_menu_about" comment="Button on main menu to see game information">About</string>
    <string name="main_menu_help" comment="Button on main menu to open help/tutorial">Help</string>
    <string name="main_menu_level_designer" comment="Button on main menu to open level designer">Level Designer</string>
    <string name="main_menu_quit" comment="Button on main menu to exit the game">Quit</string>
    <string name="main_menu_share" comment="Button to share the game with others">Share</string>
    <string name="main_menu_rate" comment="Button to rate the game">Rate</string>
    <string name="dialog_button_yes" comment="Positive response to a dialog prompt">Yes</string>
    <string name="dialog_button_no" comment="Negative response to a dialog prompt">No</string>
    <string name="dialog_button_cancel" comment="Cancel/dismiss button for dialogs">Cancel</string>
    <string name="dialog_button_continue" comment="Button to continue after a dialog">Continue</string>
    <string name="dialog_button_exit" comment="Button to exit after a dialog">Exit</string>
    <string name="game_screen_title" comment="Title shown on game screen">Game</string>
    <string name="save_load_game_screen_title" comment="Title shown on save/load screen">Save/Load Game</string>
    <string name="settings_screen_title" comment="Title shown on settings screen">Settings</string>
    <string name="about_screen_title" comment="Title shown on about screen">About</string>
    <string name="level_select_screen_title" comment="Title shown on level selection screen">Level Select</string>
    <string name="level_designer_screen_title" comment="Title shown on level designer screen">Level Designer</string>
    <string name="tutorial_screen_title" comment="Title shown on tutorial screen">Tutorial</string>
    <string name="level_button_description" comment="Description for level selection buttons">Level %1$d</string>
    <string name="level_score" comment="Text showing the score achieved on a level"></string>
    <string name="level_best_score" comment="Text showing the best score achieved on a level"></string>
    <string name="level_stars" comment="Text showing stars earned on a level">You earned %1$d stars</string>
    <string name="level_locked" comment="Text shown for locked/unavailable levels [LevelSelectionFragment]">You need %1$d more stars to unlock this level</string>
    <string name="back">Back</string>
    <string name="back_description">Return to previous screen</string>
    <string name="next_level">Next Level</string>
    <string name="next_level_description">Go to the next level</string>
    <string name="optimal_moves">Optimal: %1$d moves</string>
    <string name="your_moves">Your moves: %1$d</string>
    <string name="level_complete">Level Complete!</string>
    <string name="wrong_robot_on_target">Wrong robot! Move the correct colored robot to the goal.</string>
    <string name="level_stars_description">You earned %1$d stars</string>
    <string name="level_stars_a11y">You earned %1$d stars</string>
    <string name="stars_count">%1$d Stars</string>
    <string name="random_game_complete">Level Complete!</string>
    <string name="new_random_game_button">New Game</string>
    <string name="level_moves_format">Moves: %1$d/%2$d</string>
    <string name="level_time_format">Time: %1$d:%2$02d</string>
    <string name="level_squares_format">Squares: %1$d</string>
    <string name="level_robots_format">Robots: %1$d</string>
    <string name="robot_description">Robot %1$s at position %2$d, %3$d</string>
    <string name="robot_a11y">Robot at position</string>
    <string name="minimap_description">Minimap showing overall board layout</string>
    <string name="minimap_a11y">Minimap showing overall board layout</string>
    <string name="exit_confirm_title">Exit Game</string>
    <string name="exit_confirm_message">Are you sure you want to exit the game?</string>
    <string name="save_game_screen_title" comment="Title for the save game screen">Save Game</string>
    <string name="save_slots_tab">Save Slots</string>
    <string name="history_tab">History</string>
    <string name="save_confirm_title">Save Game</string>
    <string name="save_confirm_message">Save current game to this slot?</string>
    <string name="load_confirm_title">Load Game</string>
    <string name="save_success">Game saved successfully</string>
    <string name="load_success">Game loaded successfully</string>
    <string name="share_button_a11y">Share this saved game</string>
    <string name="info_button_a11y">Show map details</string>
    <string name="level_difficulty">Difficulty</string>
    <string name="saved_on">saved on</string>
    <string name="share_a11y">Share</string>
    <string name="empty_slot">Empty</string>
    <string name="level_difficulty_beginner">Beginner</string>
    <string name="level_difficulty_intermediate">Intermediate</string>
    <string name="level_difficulty_advanced">Advanced</string>
    <string name="level_difficulty_expert">Expert</string>
    <string name="language_settings_label">App Language:</string>
    <string name="language_settings_a11y">Select app display language</string>
    <string name="accessibility_language_label">TalkBack Language:</string>
    <string name="accessibility_language_a11y">Select TalkBack announcement language</string>
    <string name="settings_english">English</string>
    <string name="settings_german">Deutsch</string>
    <string name="settings_french">Français</string>
    <string name="settings_spanish">Español</string>
    <string name="settings_chinese">中文</string>
    <string name="settings_korean">한국어</string>
    <string name="language_same_as_app">Same as app language</string>
    <string name="language_changed_title">Language Changed</string>
    <string name="language_changed_message">The language setting has been updated. Some changes will apply immediately, while others will apply when you return to the main menu.</string>
    <string name="ok">OK</string>
    <string name="app_version" translatable="false">Version: 1.0.0</string>
    <string name="direction_north">North</string>
    <string name="direction_south">South</string>
    <string name="direction_east">East</string>
    <string name="direction_west">West</string>
    <string name="robot_move_direction">%1$s %2$s</string>
    <string name="direction_north_a11y">North</string>
    <string name="direction_south_a11y">South</string>
    <string name="direction_east_a11y">East</string>
    <string name="direction_west_a11y">West</string>
    <string name="robot_move_direction_a11y">Move the %1$s robot %2$s</string>
    <string name="robot_selected_a11y">%1$s robot selected</string>
    <string name="robot_deselected_a11y">Robot deselected</string>
    <string name="target_found_a11y">%1$s robot reached its goal</string>
    <string name="game_complete_a11y">Level complete! You solved the puzzle in %1$d moves</string>
    <string name="wall_hit_a11y">%1$s robot hit a wall</string>
    <string name="robot_hit_a11y">%1$s robot hit the %2$s robot</string>
    <string name="talkback_language_same_value" translatable="false">same</string>
    <string name="help_title" translatable="false">Help</string>
    <string name="version_format">Version: %1$s (Build %2$d)</string>
    <string name="credits_screen_title">Credits</string>
    <string name="imprint_link_text">Imprint &amp; Privacy Policy</string>
    <string name="opensource_link_text">Open Source</string>
    <string name="contact_link_text">Contact</string>
    <string name="credits_back_button">Back</string>
    <string name="credits_eclabs_description">Created by ECLabs</string>
    <string name="level_selection_title">Level Selection</string>
    <string name="level_editor_button">Level Editor</string>
    <string name="level_editor_button_short">Editor</string>
    <string name="level_editor_unlocked">Level Editor unlocked!</string>
    <string name="level_editor_hint">You have unlocked the Level Editor! Create your own levels.</string>
    <string name="level_category_beginner">Beginner</string>
    <string name="level_category_intermediate">Intermediate</string>
    <string name="level_category_advanced">Advanced</string>
    <string name="level_category_expert">Expert</string>
    <string name="save_game_title">Save Game</string>
    <string name="save_slot_format">Slot %1$d</string>
    <string name="save_empty">Empty</string>
    <string name="save_date_format">Saved: %1$s</string>
    <string name="save_level_format">Level: %1$s - Moves: %2$d</string>
    <string name="save_failed" translatable="false">Failed to save game.</string>
    <string name="save_no_targets_a11y" translatable="false">Warning: This save has no goals and may cause problems</string>
    <string name="game_move_count" comment="used in the game info box">Moves: %1$d</string>
    <string name="game_time_format" comment="TODO: used in the game timer">%1$02d:%2$02d</string>
    <string name="autosave_tag" translatable="false">[AUTOSAVE]</string>
    <string name="url_imprint" translatable="false">https://roboyard.z11.de/impressum</string>
    <string name="url_opensource" translatable="false">https://git.io/fjs5H</string>
    <string name="url_contact" translatable="false">https://eclabs.de/#kontakt</string>
    <string name="help_screen_content_title">How to Play Roboyard</string>
    <string name="help_goal_section_title">Goal</string>
    <string name="help_goal_description">Move the colored robots to their matching colored goals. The game is completed when all robots are on their matching goals.</string>
    <string name="help_movement_section_title">Movement</string>
    <string name="help_movement_point_1">- Tap on a robot to select it.</string>
</resources>